tests/codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.callable.number/rt_codegen_err_callable_number.mon
;; TEST-ID: tests.codegen.rt-codegen-err-callable-number
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.callable.number
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: compile-fail
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen rejects number literals used as function heads.
;; TEST-ATOM: ((1) 2) must fail because a number literal cannot be called.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/compile-fail branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.callable.number
;; TEST-MENU-PATH: codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.callable.number
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.callable.number
;; TEST-CLI-TARGET: codegen errors codegen compile-fail
(module Main)
((1) 2)
